sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	val swapped = true;
	while (swapped){
		for(i<-0 to getNombreValeurs-2){
			if(plusPetit(i+1,i)){
				echange(i,i+1)
				swapped = true;
			}else swapped = false;
		}
		for(i<-getNombreValeurs-2 to 0 by -1){
			if(plusPetit(i+1,i)){
				echange(i,i+1)
				swapped = true;
			}else swapped = false;
		}
	}
	
}
